# FMUWrapper_SIM

./: .gitignore  FMUSim.csl  README.md
Demo/demo_FMI_1_cs/: bouncingBall.fmu  bouncingBall_cs1.fmu  fmudemo1.mgr  fmudemo1.prt
Demo/demo_FMI_1_me/: bouncingBall.fmu  dq_me1.fmu  fmudemo1me.prt
Demo/demo_FMI_2_cs/: bouncingBall.fmu  fmudemo2cs.prt  inc_2cs.fmu
Demo/demo_FMI_2_me/: BouncingBall.fmu  bouncingBall.fmu  bouncingBall_me2.fmu  fmudemo2me.prt
Demo/demo_v3/: cordic_core_v3.fmu  fmudemoV3.prt
FMUWRAPPER_LIB/: Blocks.pas  FMUWrapperLibrary.pas  Info.pas  fmu_texts.pas  fmuwrapper_lib.dpr  fmuwrapper_lib.dproj  fmuwrapper_lib.res
FMUWrapperLibrary/: CMakeLists.txt
FMUWrapperLibrary/src/: FMUWork.cpp  FMUWork.h  libfmuwrapper.cpp  libfmuwrapper.h  libfmuwrapper_global.h  main.cpp
FMUWrapperLibrary/src/common/: Cconstants.cpp  Cconstants.h
FMUWrapperLibrary/src/fmi/: FMUAbstract.cpp  FMUAbstract.h
FMUWrapperLibrary/src/fmi/fmi10/: CCSData.cpp  CCSData.h  CMEData.cpp  CMEData.h  FMU10CoSimObject.cpp  FMU10CoSimObject.h  FMU10MExchObject.cpp  FMU10MExchObject.h  FMU10Object.cpp  FMU10Object.h  FMU10ObjectAbstract.h
FMUWrapperLibrary/src/fmi/fmi10/shared/: fmi_cs.h  fmi_me.h
FMUWrapperLibrary/src/fmi/fmi10/shared/include/: fmiModelFunctions.h  fmiModelTypes.h
FMUWrapperLibrary/src/fmi/fmi10/shared/parser/: stack10.cpp  xml_parser10.cpp  xml_parser10.h
FMUWrapperLibrary/src/fmi/fmi20/: CCS20Data.cpp  CCS20Data.h  CME20Data.cpp  CME20Data.h  FMU20CoSimObject.cpp  FMU20CoSimObject.h  FMU20MExchObject.cpp  FMU20MExchObject.h  FMU20Object.cpp  FMU20Object.h  fmi2.h
FMUWrapperLibrary/src/fmi/fmi20/include/: fmi2FunctionTypes.h
FMUWrapperLibrary/src/fmi/fmi20/parser/: XmlElement.cpp  XmlParser.cpp  XmlParser.h  XmlParserCApi.cpp  XmlParserCApi.h
FMUWrapperLibrary/vs/FMUWrapperLibrary/: FMUWrapperLibrary.sln  FMUWrapperLibrary.vcxproj  FMUWrapperLibrary.vcxproj.filters
docs/Описание модуля/: description.dita
